# ROS2-Recursive-Patchwork-Implementation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: lidar_fusion.hpp  recursive_patchwork.hpp  rosbag_loader.hpp
src/: main.cpp  rosbag_loader.cpp  visualization.cpp
src/recursive_patchwork/: CMakeLists.txt  README_LIDAR_FUSION.md  package.xml
src/recursive_patchwork/config/: lidar_fusion_example.yaml
src/recursive_patchwork/cuda/: cuda_interface.cpp  cuda_interface.cu  cuda_kernels.cu  cuda_wrapper.cu
src/recursive_patchwork/include/: cuda_interface.hpp  lidar_fusion.hpp  lidar_fusion_node.hpp  point_cloud_processor.hpp  recursive_patchwork_node.hpp  rosbag_loader.hpp  visualization.hpp
src/recursive_patchwork/launch/: lidar_fusion.launch.py  recursive_patchwork.launch.py
src/recursive_patchwork/src/: lidar_fusion.cpp  lidar_fusion_main.cpp  lidar_fusion_node.cpp  point_cloud_processor.cpp  recursive_patchwork.cpp  recursive_patchwork_node.cpp  rosbag_loader.cpp  test_cuda.cpp  visualization.cpp
test/: test_recursive_patchwork.cpp
